Cloud/IBM-Cloud-Migration/01-VMware-to-IBM/kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ibm-migration-service
spec:
  type: LoadBalancer
  selector:
    app: ibm-migration-app
  ports:
    - port: 80
      targetPort: 80
