Cloud/IBM-Cloud-Migration/01-VMware-to-IBM/kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ibm-migration-ingress
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ibm-migration-service
                port:
                  number: 80
